box fixet. text aligned og størrelse fixet.

--- a/style.css
+++ b/style.css
@@ -13,10 +13,13 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-header {
+nav{
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content:space-between;
+}
+
+header {
+
     padding: 0 28px;
     background-color: #779882;    
 }
@@ -32,6 +35,7 @@ header i {
 h1, .white-text, h3{
    color: white;
    padding-top: 0.5em;
+   text-align: center;
 }
 
 .beige-section{
@@ -40,35 +44,15 @@ h1, .white-text, h3{
 }
 
 h2{
-    padding: 1em;
+    padding-bottom: 1em;
+    font-size: 22px;
+
 }
 
 p{
     padding-right: 1em;
+    font-size: small;
 }
-
-/* This is a CSS comment 
-
-aside{
-    display: flex;
-    margin: 1em;
-    background-color: #425348;
-    border-radius: 10px;
-    float: right;
-}
-
-.kontaktform, div{
-    display: flex;
-    padding: 0 2em 2em;
-    border-radius: 5px;
-
-}
-
-.form, label{
-    border-radius: 10px;
-}
-*/
-
 
 .container, footer{
     display: flex;
@@ -121,10 +105,17 @@ input[type=submit]{
     text-decoration: none;
     margin-top: 3em;
     border-radius: 15px;
-    display: block;
     width: 300px;
     margin-bottom: 2em;
+    align-items: center;
 }
+
+.knap-box{
+    display: flex;
+justify-content: center;
+align-items: center;
+}
+
 
 footer{
     display: flex;
